--- a/src/components/timepicker/_timepicker.scss
+++ b/src/components/timepicker/_timepicker.scss
@@ -254,3 +254,14 @@ html[dir='rtl'] {
     }
   }
 }
+
+// Fix for Chinese locale only
+html[lang='zh-CN'] {
+  #timepicker-popup {
+    select.period + .dropdown-wrapper {
+      .dropdown {
+        padding-top: 6px;
+      }
+    }
+  }
+}
